This commit consits of routing and creating job and in the Ui