@@ -2,8 +2,7 @@ package com.fhir.scheduler.job;
 
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.util.List;
-import java.util.Map;
+
 import com.fhir.scheduler.entity.Available_jobs;
 import com.fhir.scheduler.repo.Jobs_repo;
 import com.fhir.scheduler.util.JobResponseCode;
@@ -11,7 +10,6 @@ import org.quartz.InterruptableJob;
 import org.quartz.JobDataMap;
 import org.quartz.JobExecutionContext;
 import org.quartz.JobExecutionException;
-import org.quartz.JobKey;
 import org.quartz.UnableToInterruptJobException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -130,7 +128,7 @@ public class CronJob extends QuartzJobBean implements InterruptableJob{
 
 
 			myClass = classLoader.loadClass(job.getClass_path());
-			instance = myClass.newInstance();
+			instance = myClass.getConstructor().newInstance();
 
 			Method method = myClass.getMethod(job.getStart_method(), new Class[]{String.class});
 
@@ -170,7 +168,7 @@ public class CronJob extends QuartzJobBean implements InterruptableJob{
 		try {
 			job = repo.findAvailable_jobsByJob_name(jobName);
 			myClass = classLoader.loadClass(job.getClass_path());
-			instance = myClass.newInstance();
+			instance = myClass.getConstructor().newInstance();
 
 			Method method = myClass.getMethod(job.getStart_method());
 
